Add ingredients and steps

--- a/recipes/monster-bites.html
+++ b/recipes/monster-bites.html
@@ -11,5 +11,21 @@
         <img src="img/monste-bites-img.jpeg" alt="A red apple with teeth">
         <h2>Description</h2>
         <p>A simple and yummy Halloween treat made with apples and peanut butter.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>4 apples, cored and cut into 8 wedges</li>
+            <li>1 cup peanut butter</li>
+            <li>½ cup candy corn, or as needed</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Step 1</li>
+            <p>Slice each wedge of apple in half the long way, making two smaller wedges.</p>
+            <li>Step 2</li>
+            <p>Spread about 3/4 teaspoon of peanut butter on one cut side of a small wedge, and place 5 or 6 pieces of candy corn sticking out of the peanut butter for teeth.</p>
+            <li>Step 3</li>
+            <p>Spread 3/4 teaspoon of peanut butter onto the cut side of second small wedge. Lightly press second wedge to the tops of the candy corn teeth, with the peanut butter to the inside, to form lips. Repeat with remaining apples, peanut butter, and candy corn.</p>
+        </ol>
+        <!-- this recipe has onli one step, so i separated it into three steps-->
     </body>
 </html>
